# au_pid

./: CMakeLists.txt  README.md  package.xml  setup.py
include/pid_control/: pid_aggregator.h  pid_wrapper.h
launch/: pid_aggregator.launch  pid_controllers.launch  pid_generic.launch
params/: front_servo.yaml  pid_gains_pool.yaml  pid_gains_sim.yaml
scripts/: positional_drift_test.bash
src/: pid_aggregator.cpp  pid_aggregator_node.cpp  pid_wrapper.cpp
src/matlab_model/: nonlinear_dynamics_sim.m  rosgen.m  symbolic_state_space.m  update_model.m
src/pid_control_lib/: __init__.py  robotStateCommand.py
test/: pid_aggregator_tests.cpp  test_pid_aggregator.test
