<?xml version="1.0"?>
<package>
  <name>pid_control</name>
  <version>0.0.0</version>
  <description>The pid_control package</description>

  <maintainer email="waqar@arvp.org">Rumman Waqar</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>au_core</build_depend>
  <build_depend>au_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pid</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>au_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>au_control</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pid</run_depend>
  <run_depend>eigen_conversions</run_depend>

</package>
